# rottenstocks

./: .env.example  .env.test  .gitignore  .markdownlint.json  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  TODO_TECH_DEBT.md  docker-compose.override.yml.example  docker-compose.yml
.claude/commands/: execute.md  status.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
backend/: .env.example  .env.test  PERFORMANCE_OPTIMIZATION_SUMMARY.md  README.md  alembic.ini  alphavantage_service.py  check_db.py  cleanup_database.py  cleanup_invalid_stocks.py  database.py  debug_api_response.py  init_db.py  main.py  pyproject.toml  requirements-dev.txt  requirements-minimal.txt  requirements.txt  stock_sync_service.py  test_alpha_vantage.py  test_endpoints.py  test_integration.py  test_real_api.py  test_refresh.py  test_sync.py  test_sync_speed.py
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: bda5beddf408_test_migration_system.py  eedcd7277705_initial_migration_with_all_tables.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: api.py  deps.py
backend/app/api/v1/endpoints/: health.py  ratings.py  stocks.py  tasks.py  testing.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: base.py  config.py  exceptions.py  session.py  utils.py
backend/app/db/models/: __init__.py  expert.py  rating.py  social_post.py  stock.py
backend/app/db/repositories/: __init__.py  base.py  expert.py  rating.py  social_post.py  stock.py
backend/app/external_apis/: __init__.py  providers.py
backend/app/external_apis/alpha_vantage/: __init__.py  client.py  schemas.py  service.py
backend/app/external_apis/base/: __init__.py  client.py  exceptions.py  rate_limiter.py  retry.py
backend/app/external_apis/reddit/: __init__.py  client.py  schemas.py  service.py
backend/app/schemas/: expert.py  rating.py  stock.py  token.py
backend/app/scripts/: __init__.py  migration_utils.py  seed_data.py
backend/app/services/: rating_service.py  stock_service.py
backend/app/tasks/: __init__.py  models.py  reddit_sync.py  scheduler.py  stock_sync.py
backend/docs/: SYNC_ENDPOINTS_SUMMARY.md
backend/scripts/: check_db.py  init_db.py  migrate_database.py  setup_demo_stocks.py  setup_test_stocks.py
backend/src/models/: database.py
backend/src/services/: stock_sync_service.py
backend/src/tests/: test_all_sync_endpoints.py  test_alpha_vantage.py  test_integration.py  test_real_api.py  test_refresh.py  test_sync.py  test_sync_speed.py
backend/tests/: conftest.py  test_config.py  test_dependencies.py  test_health_endpoints.py  test_main.py  test_middleware.py  test_security.py
backend/tests/api/: test_rating_endpoints.py  test_stock_endpoints.py
backend/tests/db/: test_base_models.py  test_expert_model.py  test_rating_model.py  test_social_post_model.py  test_stock_model.py
backend/tests/external_apis/: __init__.py  conftest.py  test_alpha_vantage_client.py  test_alpha_vantage_integration.py  test_base_client.py  test_rate_limiter.py
backend/tests/external_apis/cassettes/: .gitkeep  alpha_vantage_batch_quotes.yaml  alpha_vantage_invalid_key.yaml  alpha_vantage_invalid_symbol.yaml  alpha_vantage_overview_aapl.yaml  alpha_vantage_quote_aapl.yaml  alpha_vantage_rate_limiting.yaml  alpha_vantage_search_apple.yaml  alpha_vantage_service_cache_test.yaml  alpha_vantage_service_enrich_data.yaml  alpha_vantage_service_overview.yaml  alpha_vantage_service_price_update.yaml  alpha_vantage_service_quote.yaml  alpha_vantage_service_search.yaml  alpha_vantage_service_stock_creation.yaml  alpha_vantage_time_series_aapl.yaml
backend/tests/external_apis/reddit/: __init__.py  test_reddit_client.py  test_reddit_schemas.py  test_reddit_service.py
backend/tests/services/: test_stock_service.py
configs/: redis.conf
dev-tools/: README.md  api_query_tool.py  quick_demo.py  requirements.txt
dev-tools/database-testing/: .env.example  QUICK_START.md  README.md  config.py  generate_samples.py  health_check.py  interactive_db.py  launcher.py  query_builder.py
docs/: api-keys-guide.md  api-spec.yaml  architecture.md  development.md  implementation.md
docs/reports/: daily-accomplishments-2025-07-03.md  database-model-test-fixes-2025-07-03.md  database-testing-tools-issues-2025-07-04.md  test-failures-analysis-2025-07-03.md
frontend/: package-lock.json  package.json  playwright.config.js
frontend/public/: index.html
frontend/src/: App.css  App.js  App.tsx
frontend/src/components/AppHeader/: AppHeader.css  AppHeader.tsx
frontend/src/components/StockCard/: StockCard.css  StockCard.jsx  StockCard.tsx  index.js
frontend/src/hooks/: useStocks.js  useStocks.ts
frontend/src/types/: stock.ts
frontend/src/utils/: stockUtils.js  stockUtils.ts
frontend/tests/e2e/: stocks.spec.js
scripts/: env-validator.py  health-check.py
